@@ -31,7 +31,12 @@ typedef struct PNMContext {
     int maxval;                 ///< maximum value of a pixel
     int type;
     int endian;
+    int half;
     float scale;
+
+    uint32_t mantissatable[2048];
+    uint32_t exponenttable[64];
+    uint16_t offsettable[64];
 } PNMContext;
 
 int ff_pnm_decode_header(AVCodecContext *avctx, PNMContext * const s);
