@@ -515,9 +515,11 @@ extern const AVInputFormat  ff_image_jpegxl_pipe_demuxer;
 extern const AVInputFormat  ff_image_pam_pipe_demuxer;
 extern const AVInputFormat  ff_image_pbm_pipe_demuxer;
 extern const AVInputFormat  ff_image_pcx_pipe_demuxer;
+extern const AVInputFormat  ff_image_pfm_pipe_demuxer;
 extern const AVInputFormat  ff_image_pgmyuv_pipe_demuxer;
 extern const AVInputFormat  ff_image_pgm_pipe_demuxer;
 extern const AVInputFormat  ff_image_pgx_pipe_demuxer;
+extern const AVInputFormat  ff_image_phm_pipe_demuxer;
 extern const AVInputFormat  ff_image_photocd_pipe_demuxer;
 extern const AVInputFormat  ff_image_pictor_pipe_demuxer;
 extern const AVInputFormat  ff_image_png_pipe_demuxer;
